CSS/indexnuevostyle.css
@import url(../CSS/galeria.css);
@import url(../CSS/nav.css);
@import url(../CSS/footer.css);
@import url(../CSS/locales.css);
@import url(../CSS/acariciaungatito.css);

* {
    margin-left: 0;
    margin-right: 0;
}


body {
    overflow-x: hidden;
    background-image: url(../IMAGENES/Logoyfondo/Cafe-garritas-fondo-Mesa-de-trabajo-1.svg);
    background-size: cover;
    background-position: center center;
    background-repeat: repeat;
    z-index: 0;
}

.section1 {
    overflow: hidden;
    height: 45vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.9);
}

.section2 {
    overflow: hidden;
    height: 45vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.9);
}



.infoindex p {
    font-family: 'Patrick Hand', cursive;
    font-size: 25px;
    text-align: justify;
    padding-right: 5%;
    padding-left: 2%;
}

div.infoindex p a {
    font-family: 'Patrick Hand', cursive;
    text-decoration: none;
}

.gato1 {
    max-width: 100%;
    position: relative;
    opacity: 0.9;
    z-index: 1;
}

div h1 {
    font-family: 'Montserrat', sans-serif;
    display: flex;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -100%);
    color: white;
    font-size: 30px;
    font-weight: 900;
    text-align: center;
    z-index: 3;
}

section img {
    width: 100%;
    max-width: 600px;
    margin: 0 auto;
}

.gato4 {
    max-width: 100%;
    height: auto;
    position: relative;
    z-index: 1;
}

.flex-container-info4 {
    display: flex;
    align-items: center;
    background-image: url("../IMAGENES/adorable-gatito-blanco-negro-pared-monocromatica-detras-ella.jpg");
    background-size: cover;
    background-position: left;
    background-repeat: no-repeat;
}

.text-container {
    flex: 0 0 50%;
    padding: 10px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.info4 {
    font-family: 'Montserrat', sans-serif;
    color: #846745;
    font-size: 25px;
    font-weight: 900;
    text-align: left;
    
}

.info4 p{
    padding-right: 5%;
}

.gato2 {
    
    position: relative;
    left: -50px;
    opacity: 0;
}

.efecto-gato2 {
    left: 0px;
    opacity: 1;
    transition: 1s linear;
}

.gato3 {
    transform: scale(0.5);
    opacity: 0;
}

.efecto-gato3 {
    transform: scale(1);
    opacity: 1;
    transition: 1s linear;
}

a {
    text-decoration: none;
    color: rgb(190, 144, 7);
}

.contenedor-padre {

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-image: url(../IMAGENES/dueno-acariciando-adorable-gato.jpg);
    background-size: cover;
    z-index: 10;
    height: 400px;
    width: 100%;
}

.logoBlanco {
    margin-top: 5em;
    background-repeat: no-repeat;
    width: 150px;
    height: 150px;
    background-image: url(../IMAGENES/Logoyfondo/Cafe\ garritas\ logo\ blanco-06.svg);
}

.Bienvenidos {
    font-size: 30px;
    text-align: center;
    width: 500px;
    height: 100px;
    color: aliceblue;
    margin-bottom: auto;
    font-family: 'Patrick Hand', cursive;
}

.gatoBN {
    flex: 0 0 50%;
    padding: 10px;
}
@media screen and (max-width: 480px) {
    * {
        overflow: hidden;
        margin-left: 0;
        margin-right: 0;
    }
.section1, .section2{
    flex-direction: column;
    height: 20vh;
}
section img {
    width: 100%;
    max-width: 200px;
    margin: 0 auto;
}
    .infoindex p {
        font-size: 10px;
    }

    div h1 {
        font-size: 18px;
    }

    .text-container {
        padding: 2px;
    }

    .info4 {
        font-size: 18px;
    }

    .logoBlanco {
        margin-top: 20px;
        width: 80px;
        height: 80px;
    }

    .Bienvenidos {
        font-size: 18px;
    }
    .flex-container-info4 {
        flex-direction: column;
        background-size: cover;
        border-color: rgb(0, 0, 0);
        border-style: dotted;
    }
    .contenedor-padre{
        width: 100%;
        height: 200px;
    }
}

@media screen and (max-width: 1080px) {
    * {
        overflow: hidden;
        margin-left: 0;
        margin-right: 0;
    }
}

